4.0.4
  17-12-22
	Improvement
	* #i0028: icon for tt_content type

4.0.3
  17-12-17
	Improvement
	* #t1836: Slick Slider: Remove waste a-tag
						Heavy intervention: Fluid template Default.html is overriden! See
						* Resources/Private/Fluid/FluidStyledContent/Layouts/Default.html
	* #t1833:	CSS Styled Content > Fluid Styled Content
	* #i0027: Update for t3foundation 3.0
						* additional start CSS classes are removed from
							* slickcarousel
							* slickcontent
							* slickgallery
	* #i0026: Slick item and fluid_styled_content: div-wrap is moved from figure to figure and text. See
						* Resources/Private/Fluid/Slick/Templates/Slickitem.html

4.0.2
  17-12-14
  Improvement
	* #i0025: Fluid template: <v:asset.script> is removed

4.0.1
  17-12-05
  Improvement
	* #i0024: Upgrade TCA for TYPO3 8.7
						* bodytext;;;richtext[]:rte_transform[mode=ts];*,

4.0.0
  17-10-15
  Feature
	* #i0023: Plugins
						* Slick Slider for Content Elements
						* Slick Slider for Images

3.0.0
  17-10-14
  UPGRADE TYPO3 8.x
	BE AWARE: You should include static templates again!
	THANKS to Andrea Herzog-Kienast to contract the upgrade :) http://www.kienastdv.de/
	* #t1686: Template for fluid_styled_content
						* Moved:
							* Resources/Private/* to Resources/Private/Fluid/Slick/*
						Constant Editor
						* Moved:
							* plugin.slick.item.view.* > plugin.slick.item.template.+
	* #t1683: TYPO3 8.x
						BUGFIX
						* Uncaught UnexpectedValueException: Missing "type" in TCA of field "['tt_content']['section_frame']['config']"
						* SpriteManager > IconRegistry
						Removed Features
						* slick slideshow
	Features
	* #i0022: Slick Carousel for images (from TYPO3 8.x)
	* #i0021: ReST-Documentation

2.6.2
  17-10-12
  Feature
	* #i0020: new: controlling slick items by classes. So far it was possible: controlling by id.
						I.e: grid-elements have a clasas field. Enter slider1, slider2 or slider3

2.6.1
  17-10-11
  UPGRADE slick